force-app/main/default/objects/CaseQuoteAutomation__mdt/CaseQuoteAutomation__mdt.object-meta.xml
<CustomObject>
    <label>CaseQuoteAutomation</label>
    <pluralLabel>CaseQuoteAutomations</pluralLabel>
</CustomObject>