force-app/main/default/objects/CaseQuoteAutomation__mdt/fields/Exception__c.field-meta.xml
<CustomField>
    <fullName>Exception__c</fullName>
    <label>Exception</label>
    <length>50</length>
    <type>Text</type>
</CustomField>