force-app/main/default/objects/CaseQuoteAutomation__mdt/fields/Handler__c.field-meta.xml
<CustomField>
    <fullName>Handler__c</fullName>
    <label>Handler</label>
    <length>50</length>
    <type>Text</type>
</CustomField>