force-app/main/default/objects/CaseQuoteAutomation__mdt/fields/Next_Event__c.field-meta.xml
<CustomField>
    <fullName>Next_Event__c</fullName>
    <label>Next Event</label>
    <length>50</length>
    <type>Text</type>
</CustomField>